fixing the script of register which haven't functioned well when successfuly creating user now all works well+ reduced the gaps of the letters in the title in each page

--- a/client/styles/css/login/style-login.css
+++ b/client/styles/css/login/style-login.css
@@ -24,7 +24,7 @@
     letter-spacing: 1px;
   }
   100% {
-    letter-spacing: 10px;
+    letter-spacing: 6.5px;
     color: white;
   }
 }
@@ -37,7 +37,7 @@
     letter-spacing: 1px;
   }
   100% {
-    letter-spacing: 10px;
+    letter-spacing: 6.5px;
     color: white;
   }
 }
@@ -57,7 +57,7 @@ h1 {
   white-space: nowrap;
   overflow: hidden;
   color: white;
-  letter-spacing: 10px;
+  letter-spacing: 6.5px;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
   text-shadow: 0 2px 5px rgb(0, 0, 0);
   animation: orangeRotation 5s;
