--- a/client/styles/scss/sass-tools/keyframes.scss
+++ b/client/styles/scss/sass-tools/keyframes.scss
@@ -24,7 +24,7 @@
         letter-spacing: 1px;
     }
     100% {
-        letter-spacing: 10px;
+        letter-spacing: 6.5px;
         color: white;
     }
 }
@@ -38,7 +38,7 @@
         letter-spacing: 1px;
     }
     100% {
-        letter-spacing: 10px;
+        letter-spacing: 6.5px;
         color: white;
     }
 }
