--- a/client/styles/scss/sass-tools/mixings.scss
+++ b/client/styles/scss/sass-tools/mixings.scss
@@ -15,7 +15,7 @@
     white-space: nowrap;
     overflow: hidden;
     color: white;
-    letter-spacing: 10px;
+    letter-spacing: 6.5px;
     -webkit-text-stroke: 1px rgb(0, 0, 0);
     text-shadow: 0 2px 5px rgb(0, 0, 0);
     animation: orangeRotation 5s;
